--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,6 @@
+removed_sources:
+  rosa-elementary-theme-2.5.1.tar.gz: 366a93c16ee3f85bc3061628d6109a9983302232
 sources:
-  "metacity-1.tar.bz2": b82556e78a2b7a12eb9d2e241a674204596d46b0
-  "rosa-elementary-theme-2.5.1.tar.gz": 366a93c16ee3f85bc3061628d6109a9983302232
-  "rosa-elementary-theme-openbox.tar.gz": aa17e3e6712e724b1410b02d659f31c010cd7ae9
+  metacity-1.tar.bz2: b82556e78a2b7a12eb9d2e241a674204596d46b0
+  rosa-elementary-theme-2.5.2.tar.gz: b74cfb398a704cbe3da5b76ce185ac4a1b03cb3b
+  rosa-elementary-theme-openbox.tar.gz: aa17e3e6712e724b1410b02d659f31c010cd7ae9
