--- a/.abf.yml
+++ b/.abf.yml
@@ -2,5 +2,6 @@ removed_sources:
   rosa-elementary-theme-2.5.1.tar.gz: 366a93c16ee3f85bc3061628d6109a9983302232
 sources:
   metacity-1.tar.bz2: b82556e78a2b7a12eb9d2e241a674204596d46b0
+  rosa-aurorae-1.0.0.tar.xz: aa91eed5d36d2581d61f52487873105242e17168
   rosa-elementary-theme-2.5.2.tar.gz: b74cfb398a704cbe3da5b76ce185ac4a1b03cb3b
   rosa-elementary-theme-openbox.tar.gz: aa17e3e6712e724b1410b02d659f31c010cd7ae9
